--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ header {
     background-size: cover;
  
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 110vh;
     border-radius: 0% 0% 25% 0%;
     background-position: center;
     background-attachment: fixed;
@@ -248,6 +248,7 @@ padding-top: 30px;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-family: "Paris2024";
+    
      
 }
 
@@ -260,9 +261,10 @@ padding-top: 30px;
 }
 
 #section1 {
-    border: violet solid;
-    min-height: 500px;
+
+    min-height: 700px;
     width: 70%;
+    margin-bottom: 50px;
 }
 
 
@@ -278,9 +280,70 @@ padding-top: 30px;
     top: 350px;
 }
 
+ 
 
 #bar-around span {
     font-size: 2rem;
     float: right;
  
 }
+
+#years span {
+    position: relative;
+    top: 380px;
+
+}
+
+ 
+ 
+input[type="range"] {
+    outline: 0;
+    border: 0;
+    border-radius: 500px;
+    width: 400px;
+    max-width: 100%;
+   
+    transition: box-shadow 1s ease-in-out;
+   margin: 30px;
+   margin-left: 100px;
+   overflow: hidden;
+   
+    @media screen and (-webkit-min-device-pixel-ratio:0) {
+        & {
+            
+            height: 20px;
+            -webkit-appearance: none;
+            background-color: #ccc7c73d;
+        }
+        &::-webkit-slider-runnable-track {
+            height: 20px;
+            -webkit-appearance: none;
+            color: #8f137e;
+            margin-top: -3px;
+            transition: box-shadow 0.2s ease-in-out;
+        }
+
+        &::-webkit-slider-runnable-track {
+          overflow: hidden;
+        }
+        &::-webkit-slider-thumb {
+            width: 30px;
+            -webkit-appearance: none;
+            height: 20px;
+            cursor: ew-resize;
+            background: #c78989;
+            box-shadow: -440px 0 0 420px #91833100, inset 0 0 0 40px #7f0b8f;
+            border-radius: 40%;
+            transition: box-shadow 0.4s ease-in-out;
+            position: relative;
+            top: 1px;
+            cursor: grab;
+        }
+        &:active::-webkit-slider-thumb {
+            background: #fff;
+            box-shadow: -440px 0 0 420px #df97e5, inset 0 0 0 3px #ce95c9;
+            cursor: grabbing;
+          
+        } }
+    
+    }
