finished 2 section + 2 new sections draft

--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ header {
 }
 
 #section-counter {
-    height: 800px;
+    min-height: 800px;
     font-family: "Paris2024";
     display: flex;
     border-radius: 0% 30% 0% 0%;
@@ -144,6 +144,7 @@ header {
     margin: 50px 0;
     box-shadow: 15px 0 10px 10px #92929248;
     background-color: white;
+    padding-right: 0 !important;
 }
 
 .medals-counter {
@@ -154,31 +155,41 @@ header {
 }
 
 #medal-img {
-    width: 40%;
+    width: 100%;
     background-image: url("./img/med.jpg");
     background-size: cover;
     float: right;
-
+    position: relative;
 }
 
 #section-counter h2 {
     font-size: 9rem;
     line-height: 7rem;
-    position: absolute;
-    top: 60px;
-    left: 140px;
+    margin: 50px 0px 20px 100px;
     background: -webkit-linear-gradient(left, #423824, #d7c378);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    display: inline-block;
+    position: relative;
+    width: 130%;
+    z-index: 2;
 
 }
 
+@media (max-width: 1240px) {
+    #section-counter h2 {
+        display: block;
+        width: 100%;
+       
+        }
+}
+
 #section-counter p {
-    position: relative;
-    top: 310px;
-    left: 200px;
     font-size: 1.3rem;
     color: #423824;
+    margin-left: 100px;
+    margin-top: 30px;
+
 }
 
 .box-medal {
@@ -189,9 +200,8 @@ header {
     font-weight: 700;
     color: #423824;
     text-align: center;
-    position: relative;
-    top: 450px;
-    left: 50px;
+    margin: 150px 20px 50px 50px;
+     
 
 }
 
@@ -384,9 +394,7 @@ font-family: "Paris2024";
 
 }
 
-#section3-wrapp p {
-    padding-left: 100px;
-}
+ 
 
 select {
     width: 1000px;
@@ -418,4 +426,67 @@ select:hover {
     font-family: "Paris2024";
 }
 
+@media (max-width: 1240px) {
+   section h2 {
+        font-size: 7rem !important;
+        line-height: 5.8rem !important;
+       transition: all ease 1s;
+        }
+        #selected-year {
+            font-size: 8.5rem !important;
+        }
+}
+#host {
+    
+}
+
+.info-wrapp {
+    display: flex;
+    justify-content: space-around;
+    margin: 50px 50px 50px 100px;
+    gap: 100px;
+}
+
+#year-host {
+  
+   
+    font-size: 1.6rem;
+}
+
+#host-country {
+   
+    
+}
+
+
+
+.sec3-correlation{
+  max-width: 400px;
+  font-size: 1rem;
+  font-style: italic;
+   margin: 0;
+   padding: 0;
+  
+}
+
+.fact p{
+    
+ font-size: 1rem;
+ margin: 20px 20px;
  
+    
+  }
+
+.info-wrapp div:first-child{
+font-size: 1.3rem;
+font-style: normal;
+}
+
+#chart {
+ 
+    background-color: #412442;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
+}
