--- a/styles.css
+++ b/styles.css
@@ -838,7 +838,7 @@ margin: 30px 0px;
 @media (max-width: 1500px) {
     .explication-points{
 margin: auto;
-width: 900px;
+max-width: 80%;
     }
 }
 
